feat(zones): add support for zones in the api
BREAKING CHANGE: All api's now needs the parent zone to return versions and content
